Fix flicker bugs for timegrid view

--- a/src/css/week/time.styl
+++ b/src/css/week/time.styl
@@ -1,6 +1,6 @@
 +prefix-classes(timegrid)
     .container
-        height: inherit
+        height: 100% 
         position: relative
         overflow: hidden
         overflow-y: scroll
